dashboard: top 10: fixed the box being too wide if any user has >=100 entries.

--- a/frontend/app/dashboard/assets/main.css
+++ b/frontend/app/dashboard/assets/main.css
@@ -189,7 +189,7 @@
 }
 .dashboard-top-name {
   display: block;
-  width: 176px;
+  width: 164px;
   text-overflow: ellipsis;
   overflow: hidden;
 }
